--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
             <header class="pb-3 mb-4 border-bottom">
                 <a href="#" class="d-flex align-items-center text-dark text-decoration-none">
                     <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
-                        <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
+                        <path class="logo" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
                     </svg>
-                    <span class="fs-4">Repositórios - Prof. Traue</span>
+                    <span class="fs-4 pgtitle">Repositórios - Prof. Traue</span>
                 </a>
             </header>
             <div class="container" style="margin-top:10%;">
                 <div class="row">
                     <div class="col-md text-center pt-2">
-                        <h3>1. Selecione o turno:</h3>
+                        <h3>1. Turno:</h3>
                         <select class="select-turno mb-3" id="turno" onchange="turnoSelect()">
                             <option value="">Selecione um turno</option>
                             <option value="diurno">Manhã</option>
@@ -39,7 +39,7 @@
                         </select>
                     </div>
                     <div class="col-md text-center pt-2">
-                        <h3>2. Selecione o tipo:</h3>
+                        <h3>2. Tipo:</h3>
                         <select class="select-disctipo mb-3" id="discTipo" onchange="discTipoSelect()" disabled>
                             <option value="">Selecione um tipo de disciplina</option>
                             <option value="regulares">Regulares</option>
@@ -47,7 +47,7 @@
                         </select>
                     </div>
                     <div class="col-md text-center pt-2">
-                        <h3>3. Selecione a disciplina:</h3>
+                        <h3>3. Disciplina:</h3>
                         <select class="select-disciplina mb-3" id="disciplinas" onchange="discSelect()" disabled>
                             <option value="">Selecione a disciplina</option>
                         </select>
@@ -58,7 +58,7 @@
     </main>
     <footer class="footer">
         <div class="container">
-          <span class="text">© 2022 - Prof. Thiago Graziani Traue</span>
+          <span class="text text-white">© 2022 - Prof. Thiago Graziani Traue</span>
         </div>
     </footer>
 </body>
