--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </main>
     <footer class="footer">
         <div class="container">
-          <span class="text text-white">© <span id="year"></span> - Prof. Traue - v. 2.1.0</span>
+          <span class="text text-white">© <span id="year"></span> - Prof. Traue - v. <span id="version"></span> </span>
         </div>
     </footer>
 </body>
