--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div></div>
     </div>
     
-    <main>
+    <main id="painel">
         <div class="container py-3">
             <header class="pb-3 mb-4 border-bottom">
                 <a href="#" class="d-flex align-items-center text-dark text-decoration-none">
