--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootbox.js/5.5.2/bootbox.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="js/cookies.js" async />
     <script type="text/javascript" src="js/script.js"></script>
     <link rel="stylesheet" href="style/style.css">
+    <script src="style/cookie.css" async></script>
     <title>Git - Prof. Traue</title>
 </head>
 
