--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     <link rel="stylesheet" type="text/css" href="js/cookies.js" async />
     <script type="text/javascript" src="js/script.js"></script>
     <link rel="stylesheet" href="style/style.css">
-    <script src="style/cookie.css" async></script>
     <title>Git - Prof. Traue</title>
 </head>
 
 <body>
+    <script src="style/cookie.css" async></script>
     <div class="bar" id="loader">
         <div></div>
     </div>
@@ -40,7 +40,7 @@
             </header>
             <div class="container" style="margin-top:9%;">
                 <div class="row">
-                    <div class="col-md text-center pt-2">
+                    <div class="align-items-center col-md  blured">
                         <h3>1. Turno:</h3>
                         <select class="select-turno mb-3" id="turno" onchange="turnoSelect()">
                             <option value="">Selecione um turno</option>
@@ -48,7 +48,7 @@
                             <option value="noturno">Noite</option>
                         </select>
                     </div>
-                    <div class="col-md text-center pt-2">
+                    <div class="align-items-center col-md   blured">
                         <h3>2. Tipo:</h3>
                         <select class="select-disctipo mb-3" id="discTipo" onchange="discTipoSelect()" disabled>
                             <option value="">Selecione um tipo de disciplina</option>
@@ -56,7 +56,7 @@
                             <option value="projetos">Projetos</option>
                         </select>
                     </div>
-                    <div class="col-md text-center pt-2">
+                    <div class="align-items-center col-md   blured">
                         <h3>3. Disciplina:</h3>
                         <select class="select-disciplina mb-3" id="disciplinas" onchange="discSelect()" disabled>
                             <option value="">Selecione a disciplina</option>
