--- a/index.html
+++ b/index.html
@@ -14,14 +14,15 @@
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootbox.js/5.5.2/bootbox.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="js/cookies.js" async />
+    <script src="js/cookies.js" async></script>
+    <link rel="stylesheet" type="text/css" href="style/cookie.css" async />
     <script type="text/javascript" src="js/script.js"></script>
     <link rel="stylesheet" href="style/style.css">
     <title>Git - Prof. Traue</title>
 </head>
 
 <body>
-    <script src="style/cookie.css" async></script>
+    
     <div class="bar" id="loader">
         <div></div>
     </div>
