--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <htnl>
-  <body style="backgound-color="black"></body>
+  <body style="background-color:black">
+    .
+  </body>
   </body>
 </htnl>
