Add loading gif
Very simple lading gif on index
css reformat

--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
     <title>Git - Prof. Traue</title>
   </head>
   <body>
+    <img
+      src="img/loading.gif"
+    />
     <footer class="footer">
       <div class="container">
         <span class="text text-white"
