loading animation feature; page back and forward problem fixed; v2 moved

--- a/index.html
+++ b/index.html
@@ -35,15 +35,17 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
-    <script type="text/javascript" src="js/constants.js"></script>
+    <script type="text/javascript" src="js/constants_pt.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
     <link rel="stylesheet" href="style/style.css" />
     <title>Git - Prof. Traue</title>
   </head>
   <body>
-    <img
-      src="img/loading.gif"
-    />
+    <div id="loadingAnimation">
+      <img 
+        src="img/loading.gif"
+      />
+    </div>
     <footer class="footer">
       <div class="container">
         <span class="text text-white"
