add translation based on user's browser and bug fixes

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html>
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -35,7 +35,8 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
-    <script type="text/javascript" src="js/constants_pt.js"></script>
+    <script type="text/javascript" src="js/configs.js"></script>
+    <script type="text/javascript" src="js/constants.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
     <link rel="stylesheet" href="style/style.css" />
     <title>Git - Prof. Traue</title>
