assets reorganization. new index background

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <body>
     <div id="loadingAnimation">
       <img 
-        src="img/loading.gif"
+        src="assets/loading.gif"
       />
     </div>
     <footer class="footer">
